k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshmart
  namespace: freshmart
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
      paths:
            - path: /
        pathType: Prefix
        backend:
          service:
            name: freshmart
            port:
              number: 80
